try vscode repo

--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 TBA
 1. add proxy switcher support for javdb monitoring
 2. regional proxy filtering
-3. url-test for regional agent
+3. URL-test for regional proxy
 
  
