--- a/牛马计分.md
+++ b/牛马计分.md
@@ -15,7 +15,7 @@
 
 ## 整体计算流程
 1 通过matchID获取对局记录
-2.对每局游戏进行详细评分计算 
+2.通过对局记录对每局游戏进行详细评分计算 
 3.将游戏分为"最近5小时内"和"5小时以前"两类，分别计算平均分
 4.最终得分 = 0.8 * 最近游戏平均分 + 0.2 * 较早游戏平均分 
 ## 战绩权重
