game history weight update

--- a/牛马计分.md
+++ b/牛马计分.md
@@ -19,7 +19,7 @@
 3.将游戏分为"最近5小时内"和"5小时以前"两类，分别计算平均分
 4.最终得分 = 0.8 * 最近游戏平均分 + 0.2 * 较早游戏平均分 
 ## 战绩权重
-> 最近20局 匹配 单排 组排 大乱斗的战绩 
+> 最近20局 匹配normal 单排SOLO RANK 组排FLEX 大乱斗ARAM的战绩 
 
 - 最近5小时战绩权重 **80%**
 - 其他权重 **20%**
